# CrewAI-Llama-Search

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  README.md  agents.py  agents.yaml  config.py  crew.py  generate.py  interface.py  main.py  pyproject.toml  queries.md  requirements.txt  setup-perplexity.md  setup.md  task_manager.py  tasks.yaml  test.py  utils.py
src/: settings.py
src/llama_search/: agents.py  crew.py  main.py  task_manager.py
src/llama_search/config/: agents.yaml  tasks.yaml
tools/: citation_tools.py  scraper_tools.py  search_tools.py  tools.py
