[tool.poetry]
name = "llama-search"
version = "0.1.0"
description = "A CrewAI-powered research assistant using Llama models."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tools"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewAI = "^0.70"  # Matches the stable version as per the thread
rich = "^13.5.2"  # For terminal-based UI
python-dotenv = "^1.0.0"  # For environment variable handling
trafilatura = "^1.4.0"  # For content scraping
beautifulsoup4 = "^4.12.0"  # For HTML parsing
requests = "^2.31.0"  # For HTTP requests
duckduckgo-search = "^2.8.6"  # For DuckDuckGo web search API
pydantic = "^2.4.2" # Data validation and settings management

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"  # For testing
black = "^23.9.1"  # For code formatting
mypy = "^1.5.1"  # For type checking
flake8 = "^6.1.0"  # For linting

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
files = "agents.py crew.py interface.py main.py tools"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
exclude = ".venv,.tox,dist,build,*.egg-info"

[tool.pytest.ini_options]
testpaths = ["tests"]
